--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        gospy_go_version: ["1.12", "1.13"]
-        e2e_go_version: ["1.10", "1.11", "1.12", "1.13"]
+        gospy_go_version: ["1.13", "1.14"]
+        e2e_go_version: ["1.10", "1.11", "1.12", "1.13", "1.14"]
     steps:
 
     - name: Setup e2e Go ${{ matrix.e2e_go_version }}
